# opa-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
benches/: bench_wasm_eval.rs
crates/opa/: Cargo.toml
crates/opa-macros/: Cargo.toml
crates/opa-macros/src/: lib.rs
crates/opa/benches/: bench_wasm_eval.rs
crates/opa/examples/http/: README.md  main.rs
crates/opa/examples/wasm_bundle/: README.md
crates/opa/examples/wasm_bundle_macro/: main.rs
crates/opa/src/: lib.rs
crates/opa/src/bundle/: mod.rs
crates/opa/src/http/: data.rs  health.rs  mod.rs
crates/opa/src/wasm/: mod.rs
crates/opa/tests/: wasm.rs
examples/: Cargo.toml  build.rs  example.rego  example2.rego
examples/http/: main.rs
examples/wasm_bundle/: main.rs
src/bundle/: manifest.rs  mod.rs
src/http/: policy.rs  query.rs
src/wasm/: mod.rs
