[package]
name = "examples"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
opa = { path = "../crates/opa", features = [
    "build",
    "bundle",
    "wasmtime-aot",
    "wasmtime-cranelift",
    "http",
] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[build-dependencies]
opa = { path = "../crates/opa", features = ["build", "wasmtime-aot"] }
