[package]
name = "opa-macros"
version = "0.1.0"
edition = "2021"
description = "macros for opa"
repository = "https://github.com/tamasfe/opa-rs"
homepage = "https://github.com/tamasfe/opa-rs"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
hex = "0.4.3"
proc-macro2 = "1.0.36"
quote = "1.0.15"
sha1 = "0.10.0"
syn = "1.0.86"
which = "4.2.4"

[features]
