[package]
name = "opa"
version = "0.5.3"
edition = "2021"
description = "Unofficial SDK library for Open Policy Agent"
repository = "https://github.com/tamasfe/opa-rs"
homepage = "https://github.com/tamasfe/opa-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
bytes = "1.1.0"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
thiserror = "1.0.30"

flate2 = { version = "1.0.22", optional = true }
tar = { version = "0.4.38", optional = true }

reqwest = { version = "0.11.8", features = ["json"], optional = true }
url = { version = "2.2.2", optional = true }
uuid = { version = ">=0.8.2", features = ["serde"], optional = true }

wasmtime = { version = "0.36.0", optional = true, default-features = false }

which = { version = "4.2.4", optional = true }
walkdir = { version = "2.3.2", optional = true }

[dev-dependencies]
criterion = "0.3.5"

[features]
default = ["bundle"]
bundle = ["flate2", "tar"]
http = ["reqwest", "url", "uuid"]
wasm = ["wasmtime", "wasmtime/cranelift"]
build = ["which", "walkdir"]

[[bench]]
name = "bench_wasm_eval"
required-features = ["bundle", "wasm"]
harness = false

[[test]]
name = "wasm"
required-features = ["bundle", "wasm"]
