[package]
name = "opa"
version = "0.8.0"
edition = "2021"
description = "Unofficial SDK library for Open Policy Agent"
repository = "https://github.com/tamasfe/opa-rs"
homepage = "https://github.com/tamasfe/opa-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
bytes = "1.1.0"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
thiserror = "1.0.30"

flate2 = { version = "1.0.22", optional = true }
tar = { version = "0.4.38", optional = true }

reqwest = { version = "0.11.8", features = ["json"], optional = true }
url = { version = "2.2.2", optional = true }
uuid = { version = ">=0.8.2", features = ["serde"], optional = true }

wasmtime = { version = "2.0.0", optional = true, default-features = false }

which = { version = "4.2.4", optional = true }
walkdir = { version = "2.3.2", optional = true }
tempfile = { version = "3.3.0", optional = true }

[dev-dependencies]
criterion = "0.4.0"

[features]
default = ["bundle"]
bundle = ["dep:flate2", "dep:tar"]
http = ["dep:reqwest", "dep:url", "dep:uuid"]
wasmtime-cranelift = ["dep:wasmtime", "wasmtime?/cranelift"]
wasmtime-aot = ["bundle", "dep:wasmtime"]
build = ["dep:which", "dep:walkdir", "dep:tempfile"]

[[bench]]
name = "bench_wasm_eval"
required-features = ["bundle", "wasmtime-cranelift"]
harness = false

[[test]]
name = "wasm"
required-features = ["bundle", "wasmtime-cranelift"]
